# RuStream

./: .gitignore  CONTRIBUTING.md  LEGACY_REMOVAL.md  LICENSE  MIGRATION_PLAN.md  OPTIMIZATIONS_COMPLETE.md  README.md
.cline/: cli-session.json  repo-intelligence.json  tasks.json
.github/workflows/: ci.yml  release-check.yml
docs/: DEPLOYMENT.md  MIGRATION.md  OPTIMIZATION_OPPORTUNITIES.md  PERFORMANCE.md  RUST_VS_PYTHON.md  WINDOWS_DEV_SETUP.md
docs/archive/: CLEANUP_SUMMARY.md  MIGRATION_COMPLETE.md  OPTIMIZATIONS_COMPLETE.md  README.md  project-history.md
ruststream-core/: ANALYSIS_AND_IMPROVEMENTS.md  CHANGELOG.md  Cargo.toml  README.md
ruststream-core/.cargo/: config.toml
ruststream-core/.github/workflows/: ci.yml
ruststream-core/benches/: benchmark_suite.rs
ruststream-core/docs/: PROJECT_SUMMARY.md  README.md
ruststream-core/scripts/: .keep  pgo-build.ps1  pgo-build.sh
ruststream-core/src/: lib.rs  server.rs
ruststream-core/src/audio/: audio_bake.rs  audio_mix.rs  audio_resample.rs  buffer_pool.rs  gate_utils.rs  hot_kernels.rs  mod.rs  native_decode.rs
ruststream-core/src/cli/: mod.rs
ruststream-core/src/core/: audio_graph.rs  audio_orchestrator.rs  batch_scheduler.rs  errors.rs  instrumentation.rs  media_pipeline.rs  mod.rs  thread_pool.rs  timeline.rs
ruststream-core/src/core/render_graph/: component.rs  config.rs  graph.rs  metrics.rs  mod.rs  process.rs  reason.rs  result.rs  stages.rs
ruststream-core/src/filters/: mod.rs  overlay_cache.rs
ruststream-core/src/io/: affinity.rs  fallocate.rs  mod.rs  prefetch.rs  splice.rs  subprocess.rs  sync_io.rs  uring.rs
ruststream-core/src/probe/: cache.rs  hot_cache.rs  mod.rs
ruststream-core/src/video/: assembly.rs  clip_processing.rs  mod.rs  overlay_merge.rs  pipeline_fusion.rs
ruststream-core/tests/: integration_test.rs  real_media_probe_test.rs
ruststream-core/tests/fixtures/: README.md  generate_fixtures.ps1  generate_fixtures.sh  manifest.toml
scripts/: build-pgo.ps1  build-pgo.sh
