[package]
name = "ruststream-core"
version = "1.0.0"
edition = "2021"
description = "High-performance video/audio processing engine - 100% Rust, no Python"
license = "MIT"
authors = ["VeloxEditing Team"]
repository = "https://github.com/VeloxEditing/RustStream"
keywords = ["video", "audio", "processing", "simd", "ffmpeg"]
categories = ["multimedia", "command-line-utilities"]

[lib]
name = "ruststream_core"
path = "src/lib.rs"

[[bin]]
name = "ruststream"
path = "src/bin/main.rs"

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallel processing
rayon = "1.10"

# Database - modern embedded KV (replacement for sled)
redb = "2.0"
bincode = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Concurrency
parking_lot = "0.12"

# FFmpeg bindings
ffmpeg-next = "8.0"

# Custom memory allocator
mimalloc = { version = "0.1", default-features = false }

# CPU topology detection
num_cpus = "1.16"

# Error handling
thiserror = "2.0"

# CLI interface
clap = { version = "4.4", features = ["derive", "env"] }

# Web server (optional)
axum = { version = "0.8", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Directories
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["cli"]
cli = []
server = ["axum", "tokio", "tower", "tower-http"]
full = ["cli", "server"]

# Maximum performance release profile
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
# Disable overflow checks for maximum performance
overflow-checks = false

# Development profile
[profile.dev]
opt-level = 1
panic = "unwind"

# Benchmark profile
[profile.bench]
lto = "thin"
codegen-units = 1
