[package]
name = "ruststream-core"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
description = "Rust-first media processing engine for headless media pipelines with SIMD audio and FFmpeg-backed video workflows"
license = "MIT"
authors = ["Marcuss-ops"]
repository = "https://github.com/Marcuss-ops/RuStream"
homepage = "https://github.com/Marcuss-ops/RuStream"
documentation = "https://github.com/Marcuss-ops/RuStream/tree/main/ruststream-core"
readme = "README.md"
keywords = ["video", "audio", "processing", "simd", "ffmpeg"]
categories = ["multimedia", "command-line-utilities"]

[lib]
name = "ruststream_core"
path = "src/lib.rs"

[[bin]]
name = "ruststream"
path = "src/bin/main.rs"

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallel processing
rayon = "1.10"

# Database - modern embedded KV (replacement for sled)
redb = "2.0"
bincode = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Concurrency
parking_lot = "0.12"

# FFmpeg bindings
ffmpeg-next = "8.0"

# Custom memory allocator
mimalloc = { version = "0.1", default-features = false }

# CPU topology detection
num_cpus = "1.16"

# Error handling
thiserror = "2.0"

# Linux syscall bindings (posix_fadvise, io_uring)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
io-uring = { version = "0.7", optional = true }

# CLI interface
clap = { version = "4.4", features = ["derive", "env"] }

# Web server (optional)
axum = { version = "0.8", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Directories
dirs = "5.0"

# Native audio decoding (optional, eliminates FFmpeg subprocess per track)
# Activate with: cargo build --features symphonia
symphonia = { version = "0.5", features = ["mp3", "aac", "wav", "flac", "vorbis", "isomp4"], optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["cli", "symphonia"]
cli = []
server = ["axum", "tokio", "tower", "tower-http"]
# Native audio decode via Symphonia (no ffmpeg subprocess for pure audio)
symphonia = ["dep:symphonia"]
# io_uring for batch probing
io-uring = ["dep:io-uring"]
# Enable tests that require pre-generated fixture files:
# cargo test --features real_media
real_media = []
# Everything:
full = ["cli", "server", "symphonia", "io-uring"]

# Maximum performance release profile
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
overflow-checks = false
debug-assertions = false   # explicit: zero debug overhead in release

# PGO instrumented build — Step 1 of the PGO workflow
# Usage: $env:RUSTFLAGS="-Cprofile-generate=C:/tmp/pgo" cargo build --profile=release-pgo
[profile.release-pgo]
inherits = "release"
strip = false   # keep symbols for profdata merging

# Development profile
[profile.dev]
opt-level = 1
panic = "unwind"

# Benchmark profile — same flags as release so bench numbers are comparable
[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
overflow-checks = false
